# MillingMachine

./: .gitignore  Arc.cpp  Arc.h  CMakeLists.txt  COMport.qml  GradientButton.qml  GradientRectangle.qml  GradientText.qml  GradientTextEdit.qml  Main.qml  Message.cpp  Message.h  MillingMachine.cpp  MillingMachine.h  PositionButtons.qml  RuleButtons.qml  Status.qml  Window3D.qml  icon.rc  main.cpp  resources.qrc  shaders.qrc
AltiumLibraries/: 1986660-2.IntLib  C1608C0G1H220J080AA.IntLib  DRV8825_STEPPER_MOTOR_DRIVER_CARRIER.IntLib  ECS-50-20-5PX-TR.IntLib  ECS-80-20-5PX-TR.IntLib  EEUFM1H101E.IntLib  LM2596S-3.3.IntLib
ControlBoard/: ControlBoard.PrjPCB  ControlBoard.SchDoc
ControlBoard/__Previews/: ControlBoard.SchDocPreview
Milling/: ButtonTemplate.qml  CMakeLists.txt  CRC16.cpp  CRC16.h  Main.qml  main.cpp  millingmachine.cpp  millingmachine.h  segment.cpp  segment.h
Milling/resources/: MachineFrame.mesh  Spindel.mesh  Table.mesh  XGuides.mesh  YGuides.mesh  ZGuides.mesh
STM32/MillingMachine/Core/Inc/: CRC16.h  Machine.h  StepperMotor.h  main.h  stm32f0xx_it.h
STM32/MillingMachine/Core/Src/: CRC16.cpp  Machine.cpp  StepperMotor.cpp  main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
STM_32/Inc/: CRC16.h  Machine.h  StepperMotor.h  main.h  stm32f0xx_it.h
STM_32/Src/: Machine.cpp  StepperMotor.cpp  main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
models/: Body.mesh  Corners.mesh  Guides.mesh  GuidesHolders.mesh  GuidesLStepper.mesh  GuidesS.mesh  GuidesStepper.mesh  Spindel.mesh  SpindelHolder.mesh  Table.mesh  TableSteppers.mesh
shaders/: gradient.frag  gradient.frag.qsb  gradientShadow.frag  gradientShadow.frag.qsb  myeffect.frag  myeffect.frag.qsb  myeffect.vert.qsb
